--- a/_config.yml
+++ b/_config.yml
@@ -6,27 +6,23 @@ theme: jekyll-theme-chirpy
 # The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
 # If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
 # otherwise, the layout language will use the default value of 'en'.
-lang: en
+lang: es-ES
 
 # Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
 timezone:
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
-
-title: Chirpy # the main title
-
-tagline: A text-focused Jekyll theme # it will display as the subtitle
-
-description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
-
-# Fill in the protocol & hostname for your site.
-# E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: ""
+title: Mi Blog Personal
+tagline: Pensamientos, código y café
+description: Un blog sobre desarrollo y curiosidades
+url: "https://mc-herrera-90.github.io"
+author:
+  name: "Marco Contreras"
+  url: https://github.com/mc-herrera-90
 
 github:
-  username: github_username # change to your GitHub username
+  username: mc-herrera-90 # change to your GitHub username
 
 twitter:
   username: twitter_username # change to your Twitter username
@@ -181,6 +177,7 @@ defaults:
       toc: true # Display TOC column in posts.
       # DO NOT modify the following parameter unless you are confident enough
       # to update the code of all other post links in this project.
+      img_path: assets/img/
       permalink: /posts/:title/
   - scope:
       path: _drafts
