--- a/_data/certificates.yml
+++ b/_data/certificates.yml
@@ -1,7 +1,7 @@
 - title: "Full Stack Jr - Java"
   issuer: "Generation"
   date: 2025-09-26
-  url: "//mcherrera.dev/assets/certificados/full-stack-java_generation.pdf"
+  url: "https://mcherrera.dev/assets/certificados/full-stack-java_generation.pdf"
 
 - title: "Full Stack Trainee Python"
   issuer: "Talento Digital para Chile"
