chore(config):update  path submedia

--- a/_config.yml
+++ b/_config.yml
@@ -180,7 +180,7 @@ defaults:
       toc: true # Display TOC column in posts.
       # DO NOT modify the following parameter unless you are confident enough
       # to update the code of all other post links in this project.
-      media_subpath: /assets/img
+      media_subpath: /assets/media
       permalink: /posts/:title/
   - scope:
       path: _drafts
